Work on htmx integration